logs/infinite-160827_225057.log
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\src\toontown\toonbase\ClientStart.py", line 240, in loadScripts
    execfile('mods/'+scriptName,globals())
  File "mods/Compilation.txt", line 206, in <module>
    toonAnywhere = DirectButton(text = ("Enable Toonup anywhere", "ENABLE TOONUP ANYWHERE", "enable toonup anywhere", "enable toonup anywhere"), scale=.06, pos = (-1,-0,-.3), command=ToonupAnywhere.toonUpSetUp)
NameError: name 'ToonupAnywhere' is not defined

phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
test2
{414000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785AD0>, 406000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E7858F0>, 407000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785968>, 416000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785AF8>, 409000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E7859E0>, 401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E4B7300>, 402000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E772918>, 419000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785B70>, 411000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785A08>, 404000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785940>, 413000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785AA8>, 415000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785A80>, 408000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E7859B8>, 417000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785B98>, 410000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785B48>, 418000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785B20>, 403000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E4B4328>, 412000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785A58>, 405000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E7858A0>, 420000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1E785BC0>}
__handleAvatarChooserDone: 100000013, 'Little Zippy', ('rsl', 'ls', 'l', 'm', 19, 0, 19, 19, 10, 9, 0, 9, 7, 0), 1
2
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_8/dna/storage_BR.pdna
Reading DNA file... phase_8/dna/storage_BR_sz.pdna
Reading DNA file... phase_8/dna/the_burrrgh_sz.pdna
empty flat building with no walls
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 174
    elif len(base.localAvatar.quests) == base.localAvatar.getQuestCarryLimit() or len(base.localAvatar.quests) >= self.questsAtNoneLeft::
                                                                                                                                        ^
SyntaxError: invalid syntax

Exception occurred while processing Func-checkWhatToDo-71 of Sequence-68:
Sequence-68:
  0.000 Sequence-68 {
  0.000   Wait dur 1
  1.000   *Func-newTask-69
  1.000   Wait dur 2
  3.000   *Func-removeInterest-70
  3.000   *Func-checkWhatToDo-71
  3.000 }

Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\ShowBase.py", line 1801, in __ivalLoop
    IntervalManager.ivalMgr.step()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\IntervalManager.py", line 96, in step
    self.__doPythonCallbacks()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\IntervalManager.py", line 119, in __doPythonCallbacks
    ival.privPostEvent()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\MetaInterval.py", line 518, in privPostEvent
    self.__doPythonCallbacks()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\MetaInterval.py", line 494, in __doPythonCallbacks
    ival.privDoEvent(t, eventType)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\Interval.py", line 207, in privDoEvent
    self.privInstant()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\FunctionInterval.py", line 88, in privInstant
    self.function(*self.extraArgs, **self.kw)
  File "<string>", line 175, in checkWhatToDo
  File "<string>", line 397, in doTask
  File "<string>", line 682, in isQuestComplete
NameError: global name 'completeList' is not defined
Traceback (most recent call last):
  File "otp\otpbase\OTPBase.py", line 236, in run
    taskMgr.run()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\task\Task.py", line 502, in run
    self.step()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\task\Task.py", line 460, in step
    self.mgr.poll()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\showbase\ShowBase.py", line 1801, in __ivalLoop
    IntervalManager.ivalMgr.step()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\IntervalManager.py", line 96, in step
    self.__doPythonCallbacks()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\IntervalManager.py", line 119, in __doPythonCallbacks
    ival.privPostEvent()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\MetaInterval.py", line 518, in privPostEvent
    self.__doPythonCallbacks()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\MetaInterval.py", line 494, in __doPythonCallbacks
    ival.privDoEvent(t, eventType)
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\Interval.py", line 207, in privDoEvent
    self.privInstant()
  File "D:\Documents\ToontownSourcecode\Panda3D-1.9.0\direct\interval\FunctionInterval.py", line 88, in privInstant
    self.function(*self.extraArgs, **self.kw)
  File "<string>", line 175, in checkWhatToDo
  File "<string>", line 397, in doTask
  File "<string>", line 682, in isQuestComplete
NameError: global name 'completeList' is not defined
